[package]
name = "mould"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
config = "0.13.3"
poise = "0.5.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "chrono", "postgres", "offline"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
